--- a/piloto.html
+++ b/piloto.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
-    <title></title>
+    <title>Piloto</title>
 
     <meta name="author" content ="Alejandro"/>
     <meta name="description" content ="documento con la información de uno de los pilotos de F1, concretamente de Lance Stroll"/>
