--- a/viajes.html
+++ b/viajes.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
-    <title></title>
+    <title>Viajes</title>
 
     <meta name="author" content ="Alejandro"/>
     <meta name="description" content ="aquí cada documento debe tener la
