--- a/piloto.html
+++ b/piloto.html
@@ -28,7 +28,12 @@
         <a href="Juegos.html">Juegos</a>
     </nav>
     <h2>Lance Stroll</h2>
-    <img src="multimedia/stroll.avif" alt="stroll" width="480" height="400"/>
+    <picture>
+        <source media="(max-width: 465px)" srcset="multimedia/stroll25.jpg">
+        <source media="(max-width: 799px)" srcset="multimedia/stroll50.jpg"> 
+        <img width="450" height="400" src="multimedia/stroll.jpg" alt="stroll picture"   />
+    </picture>
+    
     <h3>Datos personales</h3>
     <p>
     Lance Strulovitch, dorsal 18, nacido el 29 de octubre de 1998 en Montreal, Canadá.<br>
@@ -112,7 +117,7 @@
     <h3>F1 theme</h3>
     <audio src="multimedia/f1Theme.mp3" controls></audio>
     <h3>Spain GP Stroll interview</h3>
-    <video src="multimedia/interview.mp4" width="480" height="400" controls></video>
+    <video src="multimedia/interview.mp4" width="450" height="400" controls></video>
     <h4>Enlaces a sitios externos</h4>
     <ul>
         <li><a href="https://www.lancestroll.com">Página del piloto</a></li>
