--- a/piloto.html
+++ b/piloto.html
@@ -31,7 +31,7 @@
     <picture>
         <source media="(max-width: 465px)" srcset="multimedia/stroll25.jpg">
         <source media="(max-width: 799px)" srcset="multimedia/stroll50.jpg"> 
-        <img src="multimedia/stroll.jpg" alt="stroll picture" style="width: auto; height: auto;"/>
+        <img src="multimedia/stroll.jpg" alt="stroll picture" style="width: auto; height: auto;"/>/>
     </picture>
     
     <h3>Datos personales</h3>
