--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="multimedia/imagenes/f1icon.ico"/>
     <title>Indice</title>
 
     <meta name="author" content ="Alejandro"/>
