--- a/noticias.html
+++ b/noticias.html
@@ -4,6 +4,7 @@
 <head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
+    <link rel="icon" href="multimedia/imagenes/f1icon.ico"/>
     <title>Noticias</title>
 
     <meta name="author" content ="Alejandro"/>
