--- a/piloto.html
+++ b/piloto.html
@@ -4,6 +4,7 @@
 <head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
+    <link rel="icon" href="multimedia/imagenes/f1icon.ico"/>
     <title>Piloto</title>
 
     <meta name="author" content ="Alejandro"/>
@@ -29,9 +30,9 @@
     </nav>
     <h2>Lance Stroll</h2>
     <picture>
-        <source media="(max-width: 465px)" srcset="multimedia/stroll25.jpg">
-        <source media="(max-width: 799px)" srcset="multimedia/stroll50.jpg"> 
-        <img src="multimedia/stroll.jpg" alt="stroll picture" style="width: auto; height: auto;">
+        <source media="(max-width: 465px)" srcset="multimedia/imagenes/stroll25.jpg"/>
+        <source media="(max-width: 799px)" srcset="multimedia/imagenes/stroll50.jpg"/> 
+        <img src="multimedia/imagenes/stroll.jpg" alt="stroll picture" style="width: auto; height: auto;"/>
     </picture>
     
     <h3>Datos personales</h3>
@@ -120,8 +121,8 @@
     <video src="multimedia/interview.mp4" width="450" height="400" controls></video>
     <h4>Enlaces a sitios externos</h4>
     <ul>
-        <li><a href="https://www.lancestroll.com">Página del piloto</a></li>
-        <li><a href="https://www.lightsoutblog.com/lance-stroll-2023-f1-season-in-statistics/">Estadísticas 2023 detalladas</a></li>
+        <li><a href="https://www.lancestroll.com" title ="Pagina web oficial de lance stroll">Página del piloto</a></li>
+        <li><a href="https://www.lightsoutblog.com/lance-stroll-2023-f1-season-in-statistics/" title ="Estadísticas de lance stroll">Estadísticas 2023 detalladas</a></li>
     </ul>
 </body>
 </html>
