--- a/plantilla.html
+++ b/plantilla.html
@@ -4,6 +4,7 @@
 <head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
+    <link rel="icon" href="multimedia/imagenes/f1icon.ico"/>
     <title>Plantilla</title>
 
     <meta name="author" content ="Alejandro"/>
