--- a/piloto.html
+++ b/piloto.html
@@ -118,7 +118,11 @@
     <h3>F1 theme</h3>
     <audio src="multimedia/f1Theme.mp3" controls></audio>
     <h3>Spain GP Stroll interview</h3>
-    <video src="multimedia/interview.mp4" width="450" height="400" controls></video>
+
+    <video controls>
+        <source src="multimedia/interview.mp4" type="video/mp4" codecs="avc1.42E01E, mp4a.40.2">
+        <source src="multimedia/interview.webm" type="video/webm" codecs="av1, vp9">
+    </video>
     <h4>Enlaces a sitios externos</h4>
     <ul>
         <li><a href="https://www.lancestroll.com" title ="Pagina web oficial de lance stroll">Página del piloto</a></li>
