--- a/piloto.html
+++ b/piloto.html
@@ -18,7 +18,7 @@
 <body>
     <!-- Datos con el contenidos que aparece en el navegador -->
     <header>
-    <h1>F1 Desktop</h1>
+    <h1><a href="index.html">F1 Desktop</a></h1>
         <nav>
             <a href="index.html">Inicio</a>
             <a href="piloto.html">Piloto</a>
@@ -30,6 +30,8 @@
             <a href="Juegos.html">Juegos</a>
         </nav>
     </header>
+
+    <p> Estás en <a href="index.html">Inicio</a> >> Piloto</p>
 
     <main>
         <section>
